--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:e2e": "npx cypress open-ct",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -13,6 +14,11 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@cypress/code-coverage": "^3.9.12",
+    "@cypress/vue": "3",
+    "@cypress/webpack-dev-server": "^1.7.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0-rc.2",
@@ -20,8 +26,12 @@
     "@vue/cli-plugin-router": "~5.0.0-rc.2",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.2",
     "@vue/cli-service": "~5.0.0-rc.2",
+    "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "babel-eslint": "^10.1.0",
+    "cypress": "^9.1.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
@@ -35,7 +45,8 @@
     "extends": [
       "plugin:vue/vue3-essential",
       "eslint:recommended",
-      "@vue/typescript/recommended"
+      "@vue/typescript/recommended",
+      "plugin:cypress/recommended"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
