--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@vueuse/core": "^7.6.1",
+    "cleave.js": "^1.6.0",
     "core-js": "^3.8.3",
+    "datepicker-js": "^0.1.98",
+    "dayjs": "^1.10.7",
+    "js-datepicker": "^5.18.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -20,6 +24,7 @@
     "@cypress/code-coverage": "^3.9.12",
     "@cypress/vue": "3",
     "@cypress/webpack-dev-server": "^1.7.0",
+    "@types/cleave.js": "^1.4.6",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -55,7 +60,11 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": ["error", {
+        "ignores": []
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
