--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@vueuse/core": "^7.6.1",
     "cleave.js": "^1.6.0",
     "core-js": "^3.8.3",
-    "datepicker-js": "^0.1.98",
     "dayjs": "^1.10.7",
     "js-datepicker": "^5.18.0",
     "vue": "^3.2.13",
@@ -61,9 +60,12 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "vue/multi-word-component-names": ["error", {
-        "ignores": []
-      }]
+      "vue/multi-word-component-names": [
+        "error",
+        {
+          "ignores": []
+        }
+      ]
     }
   },
   "browserslist": [
