Removed wrapper components: SearchView.vue SearchResult.vue; Date test, other test modified; Calendar month change, styles, disabling arrow; Date mask and styles;

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.10.7",
     "js-datepicker": "^5.18.0",
     "vue": "^3.2.13",
+    "vue-imask": "^6.4.2",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
